[gd_scene load_steps=10 format=3 uid="uid://cgfkwd0qntjq8"]

[ext_resource type="PackedScene" uid="uid://b57m5lxiwx2h6" path="res://characters/player.tscn" id="1_purpe"]
[ext_resource type="Script" path="res://levels/main.gd" id="1_x12fd"]
[ext_resource type="PackedScene" uid="uid://cks263rh6iiww" path="res://characters/mob.tscn" id="2_r07dy"]
[ext_resource type="Script" path="res://levels/ScoreText.gd" id="4_lrfp2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l1rcu"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_pxnv5"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m7o5e"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_usgrh"]
material = SubResource("StandardMaterial3D_m7o5e")

[sub_resource type="Curve3D" id="Curve3D_d6lt6"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -26.1558, 0, -13.1582, 0, 0, 0, 0, 0, 0, -25.9808, 0, 7.90475, 0, 0, 0, 0, 0, 0, 27.2308, 0, 7.8464, 0, 0, 0, 0, 0, 0, 27.1141, 0, -13.2749, 0, 0, 0, 0, 0, 0, -26.1558, 0, -13.1582),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_x12fd")
mob_scene_prefab = ExtResource("2_r07dy")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1, 2.08165e-12)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_l1rcu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_pxnv5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.387371, 0.921924, 0, -0.921924, 0.387371, 0, 14.7284, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_purpe")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.467128, 0.88419, 0, -0.88419, 0.467128, 0, 15.5228, 10.8155)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="Cylynders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylynders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 0, -13)
mesh = SubResource("CylinderMesh_usgrh")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylynders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 2.08165e-12, -13)
mesh = SubResource("CylinderMesh_usgrh")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylynders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 2.08165e-12, 8)
mesh = SubResource("CylinderMesh_usgrh")
skeleton = NodePath("../MeshInstance3D")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylynders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 0, 8)
mesh = SubResource("CylinderMesh_usgrh")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_d6lt6")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999965, 0, -0.00830799, 0, 1, 0, 0.00830799, 0, -0.999965, -26.1558, 0, -13.1582)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreText" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_lrfp2")

[node name="Retry" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Message" type="Label" parent="HUD/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -11.5
offset_right = 116.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Presiona Enter/Barra espaciadora para continuar"

[node name="ScoreTextObtained" type="Label" parent="HUD/Retry"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 26.0
offset_bottom = 49.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
